spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_boolean_patterns_work.snap
---
source: spade-tests/src/usefulness.rs
---
fn uwu(x: bool) -> bool {
    match x {
        true => true,
    }
}


error: Non-exhaustive match: pattern false not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match x {
3 │ │         true => true,
4 │ │     }
  │ ╰─────^ pattern false not covered


