spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_subpatterns_error_correctly.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A{a: bool},
    B
}

fn uwu(x: X) -> bool {
    match x {
        X::B => true,
    }
}



error: Non-exhaustive match: patterns X::A(a: false), X::A(a: true) not covered
  ┌─ testinput:7:5
  │  
7 │ ╭     match x {
8 │ │         X::B => true,
9 │ │     }
  │ ╰─────^ patterns X::A(a: false), X::A(a: true) not covered


