spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_tuple_patterns_error_correctly.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A,
    B
}

fn uwu(x: (X, X)) -> bool {
    match x {
        (X::A, X::A) => true,
    }
}


error: Non-exhaustive match: patterns (X::A, X::B), (X::B, X::A) and 1 more not covered
  ┌─ testinput:7:5
  │  
7 │ ╭     match x {
8 │ │         (X::A, X::A) => true,
9 │ │     }
  │ ╰─────^ patterns (X::A, X::B), (X::B, X::A) and 1 more not covered


