spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_tuple_patterns_error_correctly2.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A,
    B
}

fn uwu(x: (X, X)) -> bool {
    match x {
        (X::A, X::A) => true,
        (X::B, _) => true,
    }
}


error: Non-exhaustive match: pattern (X::A, X::B) not covered
   ┌─ testinput:7:5
   │  
 7 │ ╭     match x {
 8 │ │         (X::A, X::A) => true,
 9 │ │         (X::B, _) => true,
10 │ │     }
   │ ╰─────^ pattern (X::A, X::B) not covered


