spade-tests/src/snapshots/spade_tests__usefulness__tests__missing_tuple_patterns_error_correctly3.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A,
    B
}

fn uwu(x: (X, X)) -> bool {
    match x {
        (X::A, X::A) => true,
        (X::A, X::B) => true,
    }
}


error: Non-exhaustive match: patterns (X::B, X::A), (X::B, X::B) not covered
   ┌─ testinput:7:5
   │  
 7 │ ╭     match x {
 8 │ │         (X::A, X::A) => true,
 9 │ │         (X::A, X::B) => true,
10 │ │     }
   │ ╰─────^ patterns (X::B, X::A), (X::B, X::B) not covered


